# cursortalk-dictation-tool

./: .gitignore  ui-foundation-spec.md
dictation-app/: IMPLEMENTATION_AND_TESTING_DEEP_DIVE.md  PROJECT_STATUS_AND_ROADMAP.md  README.md  index.html  marketing-preview.html  marketing.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dictation-app/docs/: phase2-implementation-notes.md
dictation-app/docs/superpowers/plans/: 2026-04-18-cursortalk-website.md
dictation-app/docs/superpowers/specs/: 2026-04-18-cursortalk-website-design.md
dictation-app/scripts/: parakeet_transcribe.py
dictation-app/src/: marketing.tsx  vite-env.d.ts
dictation-app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
dictation-app/src-tauri/capabilities/: default.json
dictation-app/src-tauri/src/: app_state.rs  auth.rs  cleanup.rs  commands.rs  config.rs  desktop_ui.rs  dictation_log.rs  local_setup.rs  main.rs  paste.rs  permissions.rs  recorder.rs  sound.rs  stt.rs  tray.rs  ui_prefs.rs
dictation-app/src/api/: backend.ts
dictation-app/src/app/: App.tsx
dictation-app/src/components/: PermissionPrompt.tsx  PillIndicator.tsx  VoiceFlowMark.tsx
dictation-app/src/components/ui/: background-paths.tsx
dictation-app/src/pages/: AuthOnboardingPage.tsx  DiagnosticsPage.tsx  HomePage.tsx  LocalOnboardingPage.tsx  MarketingLandingPage.tsx  OrganizationOnboardingPage.tsx  OverlayPage.tsx  PermissionOnboardingPage.tsx  SettingsPage.tsx  SetupPage.tsx  WelcomePage.tsx
dictation-app/src/state/: appState.ts
dictation-app/src/styles/: global.css  marketing.css  overlay.css  pill.css
dictation-app/stable-builds/Enterprise Voice Dictation.app/Contents/: Info.plist
dictation-server/: .dockerignore  .env.docker.example  Dockerfile  requirements.txt  server.py
voiceflow-auth-service/: .env.example  .env.staging.example  Cargo.toml  Dockerfile  README.md
voiceflow-auth-service/migrations/: 0001_init.sql
voiceflow-auth-service/src/: main.rs
(+2 files in other folders)
