[package]
name = "dictation-app"
version = "0.1.0"
description = "Enterprise Voice Dictation desktop client"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1"
arboard = "3.6"
cpal = "0.16"
hound = "3.5"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-rs = "0.6.8"
tauri = { version = "2.0.0", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
